--- a/assets/css/templatemo-villa-agency.css
+++ b/assets/css/templatemo-villa-agency.css
@@ -1192,7 +1192,7 @@ Contact Style
 */
 
 .contact {
-  background-image: url(../images/afuera.JPG);
+  background-image: url(../images/cc8fda66-9c14-4316-a0bc-94bf964a12f8.JPG);
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center center;
@@ -1345,7 +1345,7 @@ Page Header Style
 */
 
 .page-heading {
-  background-image: url(../images/afuera.JPG);
+  background-image: url(../images/80edf16e-99ba-4894-8952-e0403d124a3e.JPG);
   background-position: center bottom;
   background-repeat: no-repeat;
   background-size: cover;
